Actualizar enlace de FCTV33 a la nueva URL

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -431,7 +431,7 @@
         >
       </a>
       <a
-        href="https://www.fctv33.work/es"
+        href="https://www.fctv33.hair/es"
         target="_blank"
         class="otra-web-link"
         style="text-decoration: none"
