--- a/src/app/agenda-evento-text/agenda-evento-text.component.html
+++ b/src/app/agenda-evento-text/agenda-evento-text.component.html
@@ -1,22 +1,19 @@
 <div class="agenda-evento-text">
-  <h3 class="evento-text">CHAMPIONS LEAGUE - 6ª JORNADA</h3>
+  <h3 class="evento-text">SUPERCOPA DE ESPAÑA</h3>
   <div class="mini-separator"></div>
   <span class="agenda-text">
-    <strong>MultiChampions</strong> |
-    &nbsp;<i class="bi bi-calendar-date"></i> 09/12 y 10/12 &nbsp;<i class="bi bi-clock"></i> 21:00h
-  </span>
-  <span style="font-weight: bold">
-    <i class="bi bi-tv"></i>&nbsp; M+ Liga de Campeones 4
+    <strong>Barça vs. Athletic</strong> |
+    &nbsp;<i class="bi bi-calendar-date"></i> 07/01 &nbsp;<i class="bi bi-clock"></i> 20:00h
   </span>
   <span class="agenda-text">
-    <strong>Athletic vs. PSG</strong> |
-    &nbsp;<i class="bi bi-calendar-date"></i> 10/12 &nbsp;<i class="bi bi-clock"></i> 21:00h
+    <strong>R. Madrid vs. Atlético</strong> |
+    &nbsp;<i class="bi bi-calendar-date"></i> 08/01 &nbsp;<i class="bi bi-clock"></i> 20:00h
   </span>
-  <span style="font-weight: bold">
-    <i class="bi bi-tv"></i>&nbsp; M+ Liga de Campeones 2
+  <span style="font-weight: bold; font-size: larger;">
+    <i class="bi bi-tv"></i>&nbsp; M+ LALIGA
   </span>
-  <br />
-  <span style="font-style: italic">
+  <!-- <br /> -->
+  <!-- <span style="font-style: italic">
     Resto de partidos consultar en Agenda Deportiva
-  </span>
+  </span> -->
 </div>
